err/python-semantic-release.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.2.dist-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/invoke'...
Listing './lib/python3.5/site-packages/invoke/parser'...
Listing './lib/python3.5/site-packages/invoke/vendor'...
Listing './lib/python3.5/site-packages/invoke/vendor/fluidity'...
Listing './lib/python3.5/site-packages/invoke/vendor/lexicon'...
Listing './lib/python3.5/site-packages/invoke/vendor/yaml2'...
Compiling './lib/python3.5/site-packages/invoke/vendor/yaml2/constructor.py'...
***   File "./lib/python3.5/site-packages/invoke/vendor/yaml2/constructor.py", line 130
    except TypeError, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/invoke/vendor/yaml2/reader.py'...
***   File "./lib/python3.5/site-packages/invoke/vendor/yaml2/reader.py", line 158
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/invoke/vendor/yaml2/resolver.py'...
***   File "./lib/python3.5/site-packages/invoke/vendor/yaml2/resolver.py", line 171
    re.compile(ur'''^(?:yes|Yes|YES|no|No|NO
                    |true|True|TRUE|false|False|FALSE
                    |on|On|ON|off|Off|OFF)$''', re.X),
                                            
                                                     
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/invoke/vendor/yaml2/scanner.py'...
***   File "./lib/python3.5/site-packages/invoke/vendor/yaml2/scanner.py", line 1427
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/invoke/vendor/yaml3'...
Listing './lib/python3.5/site-packages/invoke-0.11.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pkginfo'...
Listing './lib/python3.5/site-packages/pkginfo/tests'...
Listing './lib/python3.5/site-packages/pkginfo-1.4.1.dist-info'...
Listing './lib/python3.5/site-packages/python_semantic_release-3.10.2.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.9.1.dist-info'...
Listing './lib/python3.5/site-packages/requests_toolbelt'...
Listing './lib/python3.5/site-packages/requests_toolbelt/adapters'...
Listing './lib/python3.5/site-packages/requests_toolbelt/auth'...
Listing './lib/python3.5/site-packages/requests_toolbelt/cookies'...
Listing './lib/python3.5/site-packages/requests_toolbelt/downloadutils'...
Listing './lib/python3.5/site-packages/requests_toolbelt/multipart'...
Listing './lib/python3.5/site-packages/requests_toolbelt/threaded'...
Listing './lib/python3.5/site-packages/requests_toolbelt/utils'...
Listing './lib/python3.5/site-packages/requests_toolbelt-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/semantic_release'...
Listing './lib/python3.5/site-packages/semantic_release/history'...
Listing './lib/python3.5/site-packages/semver-2.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/ci_checks'...
Listing './lib/python3.5/site-packages/tests/parsers'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './lib/python3.5/site-packages/twine'...
Listing './lib/python3.5/site-packages/twine/commands'...
Listing './lib/python3.5/site-packages/twine-1.9.1.dist-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.30.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
